_sass/_base.scss
/* Fonts */
body {
  font-family: $base-font-family;
  color: $dark-mode-text-color;
  background-color: $dark-mode-background-color;
}
h1, h2, h3, nav *, footer * {
  font-family: $header-font-family;
}

/* Sticky Footer */
html {
  position:   relative;
  min-height: 100%;
  body {
    margin-bottom: $footer_height; /* This must match the height of the footer tag below */
  }
  footer {
    position: absolute;
    bottom:   0;
    height:   $footer_height; /* This must match the margin-bottom of the body tag above */
  }
}

/* Main styles */
body {
  font-size: $base-font-size;
  padding-top: 70px; /* Add padding for the fixed navbar (http://getbootstrap.com/components/#body-padding-required) */
  background-color: $dark-mode-background-color;
  color: $dark-mode-text-color;
  @media screen and (prefers-color-scheme: light) {
    background-color: $light-mode-background-color;
    color: $light-mode-text-color;
  }
}
footer {
  // Red heart
  .octicon-heart {color: firebrick}
  // Right align text in the footer
  right: 15px;
  text-align: right;
  &:hover { text-decoration: none; }
}

/**
 * Reset some basic elements
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin:  0;
  padding: 0;
}

/**
 * Basic styling
 */
body {
  font-family:              $base-font-family;
  font-size:                $base-font-size;
  line-height:              $base-line-height;
  font-weight:              300;
  -webkit-text-size-adjust: 100%;
}

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
  margin-bottom: $spacing-unit / 2;
}

.h1, .h2, .h3, h1, h2, h3 {
  margin-top: 10px;
}

/**
 * Images
 */
img {
  max-width:      100%;
  vertical-align: middle;
}

/**
 * Figures
 */
figure > img {
  display: block;
}

figcaption {
  font-size: $small-font-size;
}

/**
 * Lists
 */
ul, ol {
  margin-left: $spacing-unit;
}

li {
  > ul,
  > ol {
    margin-bottom: 0;
  }
}

/**
 * Headings
 */
h1, h2, h3, h4, h5, h6, nav, footer, header {
  font-weight: 300;
  font-family: $header-font-family;
}

/**
 * Links
 */
a {
  color:           $blue-dark;
  text-decoration: none;

  &:hover {
    color:           $blue-light;
    text-decoration: none;
  }
}

/**
 * Blockquotes
 */
blockquote {
  color:          $grey-light;
  border-left:    4px solid $grey-light;
  padding-left:   $spacing-unit / 2;
  font-size:      18px;
  letter-spacing: -1px;
  font-style:     italic;

  > :last-child {
    margin-bottom: 0;
  }
}

/**
 * Code formatting
 */
pre,
code {
  font-size:        15px;
  border:           1px solid $grey-light;
  border-radius:    3px;
  background-color: $dark-mode-background-color;
  @media screen and (prefers-color-scheme: light) {
    background-color: $light-mode-background-color;
  }
}

code {
  padding: 1px 5px;
}

pre {
  padding:    8px 12px;
  overflow-x: scroll;

  > code {
    border:        0;
    padding-right: 0;
    padding-left:  0;
    color: $dark-mode-text-color;
    @media screen and (prefers-color-scheme: light) {
      color: $light-mode-text-color;
    }
  }
}

/**
 * Wrapper
 */
.wrapper {
  margin-right:  auto;
  margin-left:   auto;
  padding-right: $spacing-unit;
  padding-left:  $spacing-unit;
  @extend %clearfix;

  @include media-query($on-laptop) {
    padding-right: $spacing-unit / 2;
    padding-left:  $spacing-unit / 2;
  }
}

/**
 * Clearfix
 */
%clearfix {

  &:after {
    content: "";
    display: table;
    clear:   both;
  }
}

/**
 * Icons
 */
.icon {

  > svg {
    display:        inline-block;
    width:          16px;
    height:         16px;
    vertical-align: middle;

    path {
      fill: $grey-light;
    }
  }
}

// Make sure that <code> blocks in <pre> tags don't get wrapped.
// This is required as Bootstrap makes code blocks in pre wrap, for some reason....
pre > code {
  overflow: auto;
  word-wrap: normal;
  white-space: pre;
}

// Previous/Next buttons on blog posts
.pager li>a {
  background-color: $dark-mode-background-color;
  @media screen and (prefers-color-scheme: light) {
    background-color: $light-mode-background-color;
  }
}

